    traces better without :debuginfo installed and makes libraries
    stripped for :debuginfo more likely to work.
  * When existing fileId's had no streams but the streams are provided
    by a later commit, those streams weren't always merged properly if
    there were multiple files for that fileId
  * conary config output masks user/password info in repositorymaps

Changes in 0.50.3:
  * database findTrove now has an interface that is much closer to the 
    repository findTrove function -- this enables conary q to work like 
    conary rq.
  * Group handling didn't work for multiple levels of group inclusion.
  * Database.hasTrove() no longer needs to instantiate troves.
  * Fixed overly-aggressive cleaning of the cache.
  * Added repository findTroves call to parallelize findTrove calls.
  * Added the NonMultilibDirectories policy to prevent 32-bit troves from
    utilizing lib64 directories.
  * the NormalizeInterpreterPath policy can now handle unwriteable files
  * fixed the network client code to return file contents properly when
    multiple file contents are requested from the server (bz#50)
  * rewrote Database.getTroveLatestVersion()
  * Added :debuginfo handling in Strip policy, which requires debugging
    to be turned on in optflags and elfutils's eu-strip and debugedit to
    be installed.  Like :test components, :debuginfo components are not
    installed by default.
  * File versions are now properly set to a branched version after a
    merge operation
  * cvc commit aborts again when the current versions of files are not
    the latest versions

Changes in 0.50.2:
  * Any %(lib)s-derived path (/%(lib)s, %(libdir)s, %(krbprefix)s/%(lib)s,
    or %(x11prefix)s/%(lib)s) will now cause the entire package and all
    components to be flavored with the base instruction set flavor, so
    that architecture-sensitive but non-code files in (say) /usr/lib64
    do not show up on 32-bit platforms.
  * Sped up dependency resolution on the client